--- a/jedzonko/templates/dashboard.html
+++ b/jedzonko/templates/dashboard.html
@@ -34,7 +34,7 @@
             </div>
             <div class="alert-item alert-light">
                 <i class="far icon-calendar fa-calendar-alt"></i>
-                <span class="font-weight-bold">Liczba przepisów: {{ recipes }}</span>
+                <span class="font-weight-bold">Liczba przepisów {{ recipes }}</span>
             </div>
         </div>
     </div>
