--- a/jedzonko/templates/app-add-recipe.html
+++ b/jedzonko/templates/app-add-recipe.html
@@ -3,11 +3,8 @@
 {% block title %}Nowy przepis{% endblock %}
 
 {% block content %}
-    
-<form method="POST">
-    {% csrf_token %}
-    
 <div class="dashboard-content border-dashed p-3 m-4 view-height">
+
     <div class="mt-4 ml-4 mr-4">
         <div class="row border-bottom border-3">
             <div class="col"><h3 class="color-header text-uppercase">Nowy
@@ -25,18 +22,18 @@
             <tr class="d-flex">
                 <th scope="row" class="col-2">Nazwa Przepisu</th>
                 <td class="col-7">
-                    <input type="text" name="recipe_name" class="w-100 p-1" value="">
+                    <input class="w-100 p-1" value="">
                 </td>
             </tr>
             <tr class="d-flex">
                 <th scope="row" class="col-2">Opis przepisu</th>
-                <td class="col-7"><textarea name="recipe_description" class="w-100 p-1"
+                <td class="col-7"><textarea class="w-100 p-1"
                                             rows="5"></textarea></td>
             </tr>
             <tr class="d-flex">
                 <th scope="row" class="col-2">Przygotowani(minuty)</th>
                 <td class="col-3">
-                    <input name="preparation_time" class="p-1" type="number" value="">
+                    <input class="p-1" type="number" value="">
                 </td>
             </tr>
             </tbody>
@@ -51,16 +48,14 @@
         </div>
         <div class="row d-flex">
             <div class="col-5 p-4">
-                <textarea name="method_of_prep" class="w-100 p-1" rows="10"></textarea>
+                <textarea class="w-100 p-1" rows="10"></textarea>
             </div>
             <div class="col-2"></div>
 
             <div class="col-5 p-4">
-                <textarea name="ingredients" class="w-100 p-1" rows="10"></textarea>
+                <textarea class="w-100 p-1" rows="10"></textarea>
             </div>
         </div>
     </div>
 </div>
-    
-    </form>
 {% endblock content %}
