--- a/jedzonko/templates/app-schedules.html
+++ b/jedzonko/templates/app-schedules.html
@@ -25,46 +25,48 @@
             </tr>
             </thead>
             <tbody class="text-color-lighter">
+            {% for plan in plans %}
             <tr class="d-flex">
-                <td class="col-1">1</td>
-                <td class="col-2">Plan jarski na bezmięsny tydzień</td>
-                <td class="col-7">
-                    Pojęcie kuchnia wegetariańska określa pożywienie, które ani
-                    nie zawiera mięsa, ani nie zostało przygotowane na bazie
-                    pochodzącej z mięsa (np. na rosole drobiowym).
-                    Laktoowowegetarianie (najczęściej spotykany typ wegetarian w
-                    zachodnim świecie) spożywają nabiał, laktowegetarianie
-                    wykluczają jaja, ale nie inne produkty nabiałowe.
-                </td>
+                <td class="col-1">{{ forloop.counter }}</td>
+                <td class="col-2">{{ plan.name }}</td>
+                <td class="col-7">{{ plan.description }}</td>
                 <td class="col-2 d-flex align-items-center justify-content-center flex-wrap">
-                    <a href="" class="btn btn-danger rounded-0 text-light m-1">Usuń</a>
+                    <a href=""
+                       class="btn btn-danger rounded-0 text-light m-1">Usuń</a>
                     <a href=""
                        class="btn btn-info rounded-0 text-light m-1">Szczegóły</a>
                     <a href=""
                        class="btn btn-warning rounded-0 text-light m-1">Edytuj</a>
                 </td>
             </tr>
-            <tr class="d-flex">
-                <td class="col-1">2</td>
-                <td class="col-2">Plan jarski na bezmięsny tydzień</td>
-                <td class="col-7">
-                    Pojęcie kuchnia wegetariańska określa pożywienie, które ani
-                    nie zawiera mięsa, ani nie zostało przygotowane na bazie
-                    pochodzącej z mięsa (np. na rosole drobiowym).
-                    Laktoowowegetarianie (najczęściej spotykany typ wegetarian w
-                    zachodnim świecie) spożywają nabiał, laktowegetarianie
-                    wykluczają jaja, ale nie inne produkty nabiałowe.
-                </td>
-                <td class="col-2 d-flex align-items-center justify-content-center flex-wrap">
-                    <a href="" class="btn btn-danger rounded-0 text-light m-1">Usuń</a>
-                    <a href=""
-                       class="btn btn-info rounded-0 text-light m-1">Szczegóły</a>
-                    <a href=""
-                       class="btn btn-warning rounded-0 text-light m-1">Edytuj</a>
-                </td>
-            </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
-</div>
+
+    <div>
+        <!-- PAGINATOR DO WYSWIETLANIA ILOSC STRON Z KOMENTARZAMI --->
+        <div class="paginator-current">
+            {{ plans.number }}
+        </div>
+    
+        <div class="paginator">
+            {% if plans.has_previous %}
+                <a href="?page={{ plans.previous_page_number }}">< poprzednia</a>
+            {% endif %}
+        
+            {% for page in plans.paginator.page_range %}
+                {% if page == plans.number %}
+                    {{ page }}
+                {% else %}
+                    <a href="?page={{ page }}">| {{ page }} |</a>
+                {% endif %}
+            {% endfor %}
+        
+            {% if plans.has_next %}
+                <a href="?page={{ plans.next_page_number }}">następna ></a>
+            {% endif %}
+        </div>
+    </div>
+<div>
 {% endblock content %}
