--- a/jedzonko/templates/app-recipe-details.html
+++ b/jedzonko/templates/app-recipe-details.html
@@ -1,65 +1,76 @@
 {% extends "__base__.html" %}
 {% block title %}{% endblock %}
 {% block content %}
-<div class="dashboard-content border-dashed p-3 m-4 view-height">
+    <div class="dashboard-content border-dashed p-3 m-4 view-height" xmlns="http://www.w3.org/1999/html">
 
-    <div class="mt-4 ml-4 mr-4">
-        <div class="row border-bottom border-3">
-            <div class="col"><h3 class="color-header text-uppercase">Szczegóły
-                przepisu</h3></div>
-            <div class="col d-flex justify-content-end mb-2"><a
-                    href="/app-recipes.html"
-                    class="btn btn-color rounded-0 pt-0 pb-0 pr-4 pl-4">Powrót</a>
+        <div class="mt-4 ml-4 mr-4">
+            <div class="row border-bottom border-3">
+                <div class="col"><h3 class="color-header text-uppercase">Szczegóły
+                    przepisu</h3></div>
+
+                {#                 ###### LIKE RECIPE ############}
+                <form action="{% url 'recipe-id' id=recipe_with_id.id %}" method="post">
+                    {% csrf_token %}
+                    <div class="col d-flex justify-content-end mb-2">
+                        <button id="like" class="btn btn-color rounded-0 pt-0 pb-0 pr-4 pl-4">Polub przepis</button>
+                    </div>
+                </form>
+
+
+                <div class="col d-flex justify-content-end mb-2"><a
+                        href="/app-recipes.html"
+                        class="btn btn-color rounded-0 pt-0 pb-0 pr-4 pl-4">Powrót</a>
+                </div>
+
             </div>
-        </div>
 
-        <table class="table borderless">
-            <tbody>
-            <tr class="d-flex">
-                <th scope="row" class="col-2">Nazwa Przepisu</th>
-                <td class="col-7">
-                    {{ recipe_with_id.name }}
-                </td>
-            </tr>
-            <tr class="d-flex">
-                <th scope="row" class="col-2">Opis przepisu</th>
-                <td class="col-7">{{ recipe_with_id.description }}
-                </td>
-            </tr>
-            <tr class="d-flex">
-                <th scope="row" class="col-2">Przygotowanie (minuty)</th>
-                <td class="col-7">
-                    {{ recipe_with_id.preparation_time }}
-                </td>
-            </tr>
-             <tr class="d-flex">
-                <th scope="row" class="col-2">Liczba polubień</th>
-                <td class="col-7">
-                    {{ recipe_with_id.votes }}
-                </td>
-            </tr>
-            </tbody>
-        </table>
+            <table class="table borderless">
+                <tbody>
+                <tr class="d-flex">
+                    <th scope="row" class="col-2">Nazwa Przepisu</th>
+                    <td class="col-7">
+                        {{ recipe_with_id.name }}
+                    </td>
+                </tr>
+                <tr class="d-flex">
+                    <th scope="row" class="col-2">Opis przepisu</th>
+                    <td class="col-7">{{ recipe_with_id.description }}
+                    </td>
+                </tr>
+                <tr class="d-flex">
+                    <th scope="row" class="col-2">Przygotowanie (minuty)</th>
+                    <td class="col-7">
+                        {{ recipe_with_id.preparation_time }}
+                    </td>
+                </tr>
+                <tr class="d-flex">
+                    <th scope="row" class="col-2">Liczba polubień</th>
+                    <td class="col-7">
+                        {{ recipe_with_id.votes }}
+                    </td>
+                </tr>
+                </tbody>
+            </table>
 
-        <div class="row d-flex">
-            <div class="col-5 border-bottom border-3"><h3
-                    class="text-uppercase">Sposób przygotowania</h3></div>
-            <div class="col-2"></div>
-            <div class="col-5 border-bottom border-3"><h3
-                    class="text-uppercase">Składniki</h3></div>
-        </div>
-        <div class="row d-flex">
-            <div class="col-5 p-4">
-                <p>{{ recipe_with_id.instructions }}</p>
+            <div class="row d-flex">
+                <div class="col-5 border-bottom border-3"><h3
+                        class="text-uppercase">Sposób przygotowania</h3></div>
+                <div class="col-2"></div>
+                <div class="col-5 border-bottom border-3"><h3
+                        class="text-uppercase">Składniki</h3></div>
             </div>
-            <div class="col-2"></div>
-            <ul class="col-5 p-4 list-unstyled">
-                {% for ingredient in ingredient_list %}
-                    <li>{{ ingredient }}</li>
-                {% endfor %}
-            </ul>
-        </div>
+            <div class="row d-flex">
+                <div class="col-5 p-4">
+                    <p>{{ recipe_with_id.instructions }}</p>
+                </div>
+                <div class="col-2"></div>
+                <ul class="col-5 p-4 list-unstyled">
+                    {% for ingredient in ingredient_list %}
+                        <li>{{ ingredient }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
 
+        </div>
     </div>
-</div>
 {% endblock content %}
