--- a/jedzonko/templates/app-schedules-meal-recipe.html
+++ b/jedzonko/templates/app-schedules-meal-recipe.html
@@ -1,18 +1,19 @@
 {% extends "__base__.html" %}
 {% block title %}{% endblock %}
 {% block content %}
+    <form method="post">
+        {% csrf_token %}
 <div class="dashboard-content border-dashed p-3 m-4 view-height">
     <div class="row border-bottom border-3 p-1 m-1">
         <div class="col noPadding">
             <h3 class="color-header text-uppercase">DODAJ PRZEPIS DO PLANU</h3>
         </div>
         <div class="col d-flex justify-content-end mb-2 noPadding">
-            <a href="#" class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4">Zapisz</a>
+            <button type="submit" class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4">Zapisz</button>
         </div>
     </div>
 
     <div class="schedules-content">
-        <form>
             <div class="form-group row">
                 <label for="choosePlan"
                        class="col-sm-2 label-size col-form-label">
@@ -20,11 +21,9 @@
                 </label>
                 <div class="col-sm-3">
                     <select class="form-control" id="choosePlan">
-                        <option>Mój pierwszy plan</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        {% for plan in all_plans %}
+                            <option>{{ plan.name }}</option>
+                        {% endfor %}
                     </select>
                 </div>
             </div>
@@ -52,11 +51,9 @@
                 </label>
                 <div class="col-sm-4">
                     <select class="form-control" id="recipie">
-                        <option>Zapiekanka z ziemniakami i brukselką</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        {% for recipe in recipes %}
+                            <option>{{ recipe.name }}</option>
+                        {% endfor %}
                     </select>
                 </div>
             </div>
@@ -66,15 +63,13 @@
                 </label>
                 <div class="col-sm-2">
                     <select class="form-control" id="day">
-                        <option>poniedziałek</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        {% for day in days %}
+                            <option>{{ day.name }}</option>
+                        {% endfor %}
                     </select>
                 </div>
             </div>
-        </form>
     </div>
 </div>
+    </form>
 {% endblock content %}
