--- a/jedzonko/templates/app-recipes.html
+++ b/jedzonko/templates/app-recipes.html
@@ -2,6 +2,7 @@
 {% block title %}{% endblock %}
 {% block content %}
     <div class="dashboard-content border-dashed p-3 m-4 view-height">
+    <div class="col noPadding"><h3 class="color-header text-uppercase"><a href="/main/">  Strona główna</a></h3></div>
 
         <div class="row border-bottom border-3 p-1 m-1">
             <div class="col noPadding"><h3 class="color-header text-uppercase">Lista
@@ -42,7 +43,7 @@
         </table>
     
         <div>
-            <!-- PAGINATOR DO WYSWIETLANIA ILOSC STRON Z KOMENTARZAMI --->
+            <!-- PAGINATOR DO WYSWIETLANIA ILOSC STRON Z KOM    ENTARZAMI --->
             {% if recipes.has_previous %}
                 <a href="?page={{ recipes.previous_page_number }}">< poprzednia</a>
             {% endif %}
