--- a/jedzonko/templates/app-schedules-meal-recipe.html
+++ b/jedzonko/templates/app-schedules-meal-recipe.html
@@ -1,26 +1,25 @@
 {% extends "__base__.html" %}
 {% block title %}{% endblock %}
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-<div class="dashboard-content border-dashed p-3 m-4 view-height">
-    <div class="row border-bottom border-3 p-1 m-1">
-        <div class="col noPadding">
-            <h3 class="color-header text-uppercase">DODAJ PRZEPIS DO PLANU</h3>
+<form method="post">
+    {% csrf_token %}
+    <div class="dashboard-content border-dashed p-3 m-4 view-height">
+        <div class="row border-bottom border-3 p-1 m-1">
+            <div class="col noPadding">
+                <h3 class="color-header text-uppercase">DODAJ PRZEPIS DO PLANU</h3>
+            </div>
+            <div class="col d-flex justify-content-end mb-2 noPadding">
+                <button type="submit" class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4">Zapisz</button>
+            </div>
         </div>
-        <div class="col d-flex justify-content-end mb-2 noPadding">
-            <button type="submit" class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4">Zapisz</button>
-        </div>
-    </div>
-
-    <div class="schedules-content">
+        <div class="schedules-content">
             <div class="form-group row">
                 <label for="choosePlan"
                        class="col-sm-2 label-size col-form-label">
                     Wybierz plan
                 </label>
                 <div class="col-sm-3">
-                    <select class="form-control" id="choosePlan">
+                    <select class="form-control" id="choosePlan" name="choosePlan">
                         {% for plan in all_plans %}
                             <option>{{ plan.name }}</option>
                         {% endfor %}
@@ -32,7 +31,7 @@
                     Nazwa posiłku
                 </label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" value="" id="name"
+                    <input type="text" class="form-control" name="name" value="" id="name"
                            placeholder="Nazwa posiłku">
                 </div>
             </div>
@@ -41,16 +40,16 @@
                     Numer posiłku
                 </label>
                 <div class="col-sm-2">
-                    <input type="text" class="form-control" value="" id="number"
+                    <input type="text" class="form-control" name="number" value="" id="number"
                            placeholder="Numer posiłku">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="recipie" class="col-sm-2 label-size col-form-label">
+                <label for="recipe" class="col-sm-2 label-size col-form-label">
                     Przepis
                 </label>
                 <div class="col-sm-4">
-                    <select class="form-control" id="recipie">
+                    <select class="form-control" id="recipe" name="recipe">
                         {% for recipe in recipes %}
                             <option>{{ recipe.name }}</option>
                         {% endfor %}
@@ -62,14 +61,14 @@
                     Dzień
                 </label>
                 <div class="col-sm-2">
-                    <select class="form-control" id="day">
+                    <select class="form-control" id="day" name="day">
                         {% for day in days %}
                             <option>{{ day.name }}</option>
                         {% endfor %}
                     </select>
                 </div>
             </div>
+        </div>
     </div>
-</div>
-    </form>
+</form>
 {% endblock content %}
