--- a/jedzonko/templates/app-details-schedules.html
+++ b/jedzonko/templates/app-details-schedules.html
@@ -8,6 +8,8 @@
                 <h3 class="color-header text-uppercase">SZCZEGÓŁY PLANU</h3>
             </div>
             <div class="col d-flex justify-content-end mb-2 noPadding">
+                <a href="{% url "plan-add-recipe" %}" 
+                   class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4 mr-2">Dodaj przepis do planu</a>
                 <a href="" class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4">Powrót</a>
             </div>
         </div>
