--- a/jedzonko/templates/app-recipes.html
+++ b/jedzonko/templates/app-recipes.html
@@ -6,8 +6,10 @@
         <div class="row border-bottom border-3 p-1 m-1">
             <div class="col noPadding"><h3 class="color-header text-uppercase">Lista
                 Przepisów</h3></div>
-            <div class="col noPadding d-flex justify-content-end mb-2"><a
-                    href="/app-add-recipe.html"
+            <div class="col noPadding d-flex justify-content-end mb-2">
+                <a href="{% url "plan-add-recipe" %}"
+                   class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4 mr-2">Dodaj przepis do planu</a>
+                <a href="/app-add-recipe.html"
                     class="btn btn-success rounded-0 pt-0 pb-0 pr-4 pl-4">Dodaj
                 przepis</a></div>
         </div>
