--- a/jedzonko/templates/index.html
+++ b/jedzonko/templates/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link disabled" href="recipe/list">Przepisy</a>
                 </li>
                 <li class="nav-item ml-4">
-                    <a class="nav-link" href="{% url 'contact_page' %}">Kontakt</a>
+                    <a class="nav-link" href="#contact">Kontakt</a>
                 </li>
             </ul>
         </nav>
