--- a/jedzonko/templates/app-recipes.html
+++ b/jedzonko/templates/app-recipes.html
@@ -36,7 +36,7 @@
                            class="btn btn-danger rounded-0 text-light m-1">Usuń</a>
                         <a href="{% url 'recipe-id' recipe.id %}"
                            class="btn btn-info rounded-0 text-light m-1">Szczegóły</a>
-                        <a href="/recipe/{{ recipe.id }}/"
+                        <a href="{% url 'modify-recipe' recipe.id %}"
                            class="btn btn-warning rounded-0 text-light m-1">Edytuj</a>
                     </td>
                 </tr>
