--- a/jedzonko/templates/app-schedules.html
+++ b/jedzonko/templates/app-schedules.html
@@ -36,7 +36,7 @@
                        class="btn btn-danger rounded-0 text-light m-1">Usuń</a>
                     <a href="/plan/{{ plan.id }}/"
                        class="btn btn-info rounded-0 text-light m-1">Szczegóły</a>
-                    <a href="{% url  %}"
+                    <a href="{% url 'plan-id' plan.id %}"
                        class="btn btn-warning rounded-0 text-light m-1">Edytuj</a>
                 </td>
             </tr>
