--- a/jedzonko/templates/index.html
+++ b/jedzonko/templates/index.html
@@ -30,10 +30,10 @@
                 </li>
                 -->
                 <li class="nav-item ml-4">
-                    <a class="nav-link" href="/about/" name="about">o aplikacji</a>
+                    <a class="nav-link" href="/about/">o aplikacji</a>
                 </li>
                 <li class="nav-item ml-4">
-                    <a class="nav-link disabled" href="recipe/list">Przepisy</a>
+                    <a class="nav-link disabled" href="{% url "recipe-list" %}">Przepisy</a>
                 </li>
                 <li class="nav-item ml-4">
                     <a class="nav-link" href="{% url "contact-page" %}">Kontakt</a>
